Fix game-td spacing

--- a/Game_Review/review/static/review/main.css
+++ b/Game_Review/review/static/review/main.css
@@ -13,8 +13,8 @@ html, body {
 }
 
 main {
-  flex: 1;
-  padding: 1em 0;
+    flex: 1;
+    padding: 1em 0;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -44,6 +44,7 @@ ul {
 .content-section {
     background: #ffffff;
     padding: 10px 20px;
+
     /* border: 1px solid #dddddd; */
     border-radius: 4px;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
@@ -164,6 +165,7 @@ figure figcaption {
 
 .games-table {
     border: none;
+    display: flex;
     padding: 1em 0.5em;
 
     /*
@@ -176,6 +178,7 @@ figure figcaption {
     border-radius: 4px;
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
     display: inline-block;
+    margin-bottom: 1em;
     text-align: center;
     transition: box-shadow ease-in 100ms;
     transition: margin-top ease-in 100ms;
@@ -183,7 +186,7 @@ figure figcaption {
 }
 
 .game-td:not(:last-of-type) {
-    margin-right: 0.5em;
+    margin-right: 1em;
 }
 
 .game-td:hover {
@@ -207,60 +210,61 @@ figure figcaption {
 }
 
 .game-page {
-  padding: 0;
-  position: relative;
+    padding: 0;
+    position: relative;
 }
 
 .game-page .top-section {
-  position: relative;
+    position: relative;
 }
 
 .game-page .backdrop {
-  border-radius: 4px 4px 0 0;
-  position: absolute;
-  width: 100%;
-  height: 5em;
-  object-fit: cover;
+    border-radius: 4px 4px 0 0;
+    position: absolute;
+    width: 100%;
+    height: 5em;
+    object-fit: cover;
 }
 
 .game-page h1 {
-  color: white;
-  position: absolute;
-  text-shadow: 0 0 4px rgba(255, 255, 255, 0.2);
-  top: 0.5em;
-  left: 0.5em;
-  z-index: 999;
+    color: white;
+    position: absolute;
+    text-shadow: 0 0 4px rgba(255, 255, 255, 0.2);
+    top: 0.5em;
+    left: 0.5em;
+    z-index: 999;
 }
 
 .game-page img.backdrop {
-  opacity: 0.5;
+    opacity: 0.5;
 }
 
 .game-page div.backdrop {
-  background: black;
-  /* background: linear-gradient(black, white 35%); */
-  background: linear-gradient(white, black 35%);
-  opacity: 0.5;
+    background: black;
+
+    /* background: linear-gradient(black, white 35%); */
+    background: linear-gradient(white, black 35%);
+    opacity: 0.5;
 }
 
 .game-page .main-content {
-  padding: 1em;
-  padding-top: 5.5em;
+    padding: 1em;
+    padding-top: 5.5em;
 }
 
 .game-page .main-content img, video {
-  border-radius: 4px;
-  border: 1px solid #dedede;
-  cursor: pointer;
-  max-height: 20em;
-  transition: box-shadow ease-in 100ms;
-  transition: margin-top ease-in 100ms;
-  width: auto;
+    border-radius: 4px;
+    border: 1px solid #dedede;
+    cursor: pointer;
+    max-height: 20em;
+    transition: box-shadow ease-in 100ms;
+    transition: margin-top ease-in 100ms;
+    width: auto;
 }
 
 .game-page .main-content img:hover, video:hover {
-  box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
-  margin-top: -0.05em;
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
+    margin-top: -0.05em;
 }
 
 .has-backdrop {
